"""baseline

Revision ID: d08e7a95949e
Revises: 
Create Date: 2025-08-28 19:36:20.102245

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'd08e7a95949e'
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('books',
    sa.Column('id', sa.String(), nullable=False),
    sa.Column('name', sa.String(), nullable=True),
    sa.Column('author', sa.String(), nullable=True),
    sa.Column('available', sa.Boolean(), nullable=True),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('classes',
    sa.Column('id', sa.String(), nullable=False),
    sa.Column('name', sa.String(), nullable=True),
    sa.Column('teacherName', sa.String(), nullable=True),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('students',
    sa.Column('id', sa.String(), nullable=False),
    sa.Column('name', sa.String(), nullable=True),
    sa.Column('classId', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['classId'], ['classes.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('transactions',
    sa.Column('id', sa.String(), nullable=False),
    sa.Column('classId', sa.String(), nullable=True),
    sa.Column('studentId', sa.String(), nullable=True),
    sa.Column('bookId', sa.String(), nullable=True),
    sa.Column('borrowDate', sa.Date(), nullable=True),
    sa.Column('returnDate', sa.Date(), nullable=True),
    sa.Column('status', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['bookId'], ['books.id'], ),
    sa.ForeignKeyConstraint(['classId'], ['classes.id'], ),
    sa.ForeignKeyConstraint(['studentId'], ['students.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('transactions')
    op.drop_table('students')
    op.drop_table('classes')
    op.drop_table('books')
    # ### end Alembic commands ###
